tests/compile/shader_modules/rasterization_combinator.gcc.stderr
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/rasterization_combinator.cpp:1:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::RasterizationCombinator<T>::operator()(VertexShader&, FragmentShader&) const [with VertexShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, rcgp::Smooth<rcgp::vector<float, 3> >, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >; rcgp::Topology T = rcgp::Topology::eTriangleList]':
tests/compile/shader_modules/rasterization_combinator.cpp:46:4:   required from here
   42 |         auto pipeline = RasterizationCombinator <Topology::eTriangleList> {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   43 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   44 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   45 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   46 |         } (fs, vs);
      |         ~~^~~~~~~~
include/meta/combinators.hpp:78:31: error: static assertion failed: rasterization combinator: arg@0 is not a vertex shader
   78 |                 static_assert(is_vertex, "rasterization combinator: arg@0 is not a vertex shader");
      |                               ^~~~~~~~~
include/meta/combinators.hpp:78:31: note: 'is_vertex' evaluates to false
include/meta/combinators.hpp:80:31: error: static assertion failed: rasterization combinator: arg@1 is not a fragment shader
   80 |                 static_assert(is_fragment, "rasterization combinator: arg@1 is not a fragment shader");
      |                               ^~~~~~~~~~~
include/meta/combinators.hpp:80:31: note: 'is_fragment' evaluates to false
include/meta/combinators.hpp:83:39: error: static assertion failed: rasterization combinator got incompatible shader modules:
    vertex shader outputs: (f32[4])
    fragment shader inputs: ()
arity mismatch; vertex shader emits 1 outputs while
fragment shader requires 0 inputs
   83 |                         static_assert(false, io);
      |                                       ^~~~~
include/meta/combinators.hpp:83:39: note: 'false' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::RasterizationCombinator<T>::operator()(VertexShader&, FragmentShader&) const [with VertexShader = rcgp::shader_stage<rcgp::ShaderStage::eCompute, void, rcgp::WorkGroup<1, 1, 1> >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >; rcgp::Topology T = rcgp::Topology::eTriangleList]':
tests/compile/shader_modules/rasterization_combinator.cpp:59:4:   required from here
   55 |         auto pipeline = RasterizationCombinator <Topology::eTriangleList> {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   56 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   57 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   58 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   59 |         } (cs, fs);
      |         ~~^~~~~~~~
include/meta/combinators.hpp:78:31: error: static assertion failed: rasterization combinator: arg@0 is not a vertex shader
   78 |                 static_assert(is_vertex, "rasterization combinator: arg@0 is not a vertex shader");
      |                               ^~~~~~~~~
include/meta/combinators.hpp:78:31: note: 'is_vertex' evaluates to false
include/meta/combinators.hpp:83:39: error: static assertion failed: rasterization combinator got incompatible shader modules:
    vertex shader outputs: ()
    fragment shader inputs: (f32[3])
arity mismatch; vertex shader emits 0 outputs while
fragment shader requires 1 inputs
   83 |                         static_assert(false, io);
      |                                       ^~~~~
include/meta/combinators.hpp:83:39: note: 'false' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::RasterizationCombinator<T>::operator()(VertexShader&, FragmentShader&) const [with VertexShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, rcgp::Smooth<rcgp::vector<float, 3> >, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 2> >; rcgp::Topology T = rcgp::Topology::eTriangleList]':
tests/compile/shader_modules/rasterization_combinator.cpp:75:4:   required from here
   71 |         auto pipeline = RasterizationCombinator <Topology::eTriangleList> {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   72 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   73 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   74 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   75 |         } (vs, fs);
      |         ~~^~~~~~~~
include/meta/combinators.hpp:83:39: error: static assertion failed: rasterization combinator got incompatible shader modules:
    vertex shader outputs: (f32[3])
    fragment shader inputs: (f32[2])
type mismatch in @0; vertex shader returns f32[3] while
fragment shader requires f32[2]
   83 |                         static_assert(false, io);
      |                                       ^~~~~
include/meta/combinators.hpp:83:39: note: 'false' evaluates to false
